--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,7 @@ Package: cacher
 Title: Tools for caching computations
 Version: 0.1
 Date: 2007-07-05
-Depends: R (>= 2.5.0)
-Imports: utils, digest
+Depends: R (>= 2.5.0), digest, utils
 LazyLoad: yes
 Author: Roger D. Peng <rpeng@jhsph.edu>
 Maintainer: Roger D. Peng <rpeng@jhsph.edu>
