--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,9 @@
 Package: cacher
 Title: Tools for caching computations
 Version: 0.1
-Date: 2007-07-05
-Depends: R (>= 2.5.0), digest, utils
+Date: 2007-07-19
+Depends: R (>= 2.5.1)
+Imports: digest, utils
 LazyLoad: yes
 Author: Roger D. Peng <rpeng@jhsph.edu>
 Maintainer: Roger D. Peng <rpeng@jhsph.edu>
