Add 'showobjects' function
Returns the objects created by a given expression

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,8 @@ export(
        "cc",
        "setConfig",
        "getConfig",
-       "setFile"
+       "setFile",
+       "showobjects"
        )
 
 import(digest)
