Add 'package' function for zipping up packages
This probably only works on Unix right now.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,8 @@ export(
        "setConfig",
        "getConfig",
        "setFile",
-       "showobjects"
+       "showobjects",
+       "package"
        )
 
 import(digest)
