Add a 'loadcache' function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@ export(
        "code",
        "runcode",
        "skipcode",
+       "loadcache",
        "cacher",
        "cc",
        "setConfig",
