Only allow 'setFile' if srcfile exists in cache dir
Add a 'showFiles' function to show files in the cache dir

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(
        "setConfig",
        "getConfig",
        "setFile",
+       "showFiles",
        "showobjects",
        "package"
        )
