Add clonecache to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,7 +10,8 @@ export(
        "setFile",
        "showFiles",
        "showobjects",
-       "package"
+       "package",
+       "clonecache"
        )
 
 import(digest)
