--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,8 +7,7 @@ export(
        "cc",
        "setConfig",
        "getConfig",
-       "setFile",
-       "showFiles",
+       "sourcefile",
        "showobjects",
        "package",
        "clonecache"
