--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(
        "setConfig",
        "getConfig",
        "sourcefile",
+       "cache",
        "showobjects",
        "package",
        "clonecache"
