--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,7 +12,8 @@ export(
        "cache",
        "showobjects",
        "package",
-       "clonecache"
+       "clonecache",
+       "downloadCacheDB"
        )
 
 import(digest)
