--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(
        "showobjects",
        "package",
        "clonecache",
+       "packageArchive",
        "downloadCacheDB"
        )
 
