Add 'showcode' function which just shows the source file

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,7 +14,8 @@ export(
        "package",
        "clonecache",
        "packageArchive",
-       "downloadCacheDB"
+       "downloadCacheDB",
+       "showcode"
        )
 
 import(digest)
