Add pkgupload function; add RCurl to Suggests: for pkgupload

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,6 +4,7 @@ Version: 0.1
 Date: 2007-07-19
 Depends: R (>= 2.5.1)
 Imports: digest, utils, tools
+Suggests: RCurl
 LazyLoad: yes
 Author: Roger D. Peng <rpeng@jhsph.edu>
 Maintainer: Roger D. Peng <rpeng@jhsph.edu>
