--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,7 +15,7 @@ export(
        "clonecache",
        "checkcode",
        "pkgupload",
-       "verify",
+       "checkobjects",
        "showcode"
        )
 
