--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,4 +9,4 @@ LazyLoad: yes
 Author: Roger D. Peng <rpeng@jhsph.edu>
 Maintainer: Roger D. Peng <rpeng@jhsph.edu>
 Description: This package provides tools for caching statistical analyses in key-value databases which can subsequently be distributed over the web.  
-License: GNU GPL (version 2 or later)
+License: GPL (>= 2)
