--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Title: Tools for caching and distributing statistical analyses
 Version: 0.1
 Date: 2007-11-26
 Depends: R (>= 2.6.0)
-Imports: digest, utils, tools
+Imports: utils
 Suggests: RCurl
 LazyLoad: yes
 Author: Roger D. Peng <rpeng@jhsph.edu>
