--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: cacher
 Title: Tools for caching and distributing statistical analyses
-Version: 0.1-2
-Date: 2008-02-21
+Version: 0.2
+Date: 2008-03-27
 Depends: R (>= 2.6.0)
 Imports: utils
 Suggests: RCurl
