--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: cacher
 Title: Tools for caching and distributing statistical analyses
-Version: 0.2
+Version: 0.2-1
 Date: 2008-04-29
 Depends: R (>= 2.7.0)
 Imports: utils
