--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: cacher
 Title: Tools for caching and distributing statistical analyses
-Version: 0.2-2
-Date: 2008-06-05
+Version: 1.0
+Date: 2008-07-21
 Depends: R (>= 2.7.0)
 Imports: utils
 Suggests: digest
