--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: cacher
 Title: Tools for caching and distributing statistical analyses
-Version: 1.0
-Date: 2008-07-21
-Depends: R (>= 2.7.0)
+Version: 1.1
+Date: 2009-05-28
+Depends: R (>= 2.9.0)
 Imports: utils
-Suggests: digest
+Suggests: digest, CodeDepends
 Author: Roger D. Peng <rpeng@jhsph.edu>
 Maintainer: Roger D. Peng <rpeng@jhsph.edu>
 Description: This package provides tools for caching statistical analyses in key-value databases which can subsequently be distributed over the web.  
