--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(
        "sourcefile",
        "showfiles",
        "cache",
+       "setcache",
        "showobjects",
        "package",
        "clonecache",
