Deprecate 'package' in favor of 'cachepackage'
Same function, but 'package' has a bit too ambiguous a meaning (could
be confused with R packages).

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(
        "setcache",
        "showobjects",
        "package",
+       "cachepackage",
        "clonecache",
        "checkcode",
        "checkobjects",
