--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,4 +9,4 @@ Author: Roger D. Peng <rpeng@jhsph.edu>
 Maintainer: Roger D. Peng <rpeng@jhsph.edu>
 Description: This package provides tools for caching statistical analyses in key-value databases which can subsequently be distributed over the web.  
 License: GPL (>= 2)
-URL: http://github.com/rdpeng/cacher/tree/master
+URL: http://github.com/rdpeng/cacher
